Add false positive about readonly property to PHPStan baseline

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,3 +1,5 @@
+includes:
+	- phpstan-baseline.neon
 services:
   errorFormatter.junit:
     class: PHPStan\Command\ErrorFormatter\JUnitErrorFormatter
