--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
-    "name": "dreadnip/analogo",
+    "name": "dreadnip/chop",
     "description": "Clear opcache through php-fpm",
     "require": {
-        "php": "^8.1",
-        "symfony/console": "^6.2",
+        "php": "^7.4 || ^8.1",
+        "symfony/console": "^5.4 || ^6.2",
         "hollodotme/fast-cgi-client": "^3.1"
     },
     "require-dev": {
-        "symfony/var-dumper": "^6.0",
-        "phpstan/phpstan": "1.8",
-        "squizlabs/php_codesniffer": "^3.6",
+        "symfony/var-dumper": "^5.4 || ^6.2",
+        "phpstan/phpstan": "^1.9",
+        "squizlabs/php_codesniffer": "^3.7",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "Analogo\\": "src/"
+            "Chop\\": "src/"
         }
     },
     "autoload-dev":{
         "psr-4" : {
-            "Analogo\\Test\\": "tests/"
+            "Chop\\Test\\": "tests/"
         }
     },
-    "bin": ["analogo"]
+    "bin": ["chop"]
 }
