--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,6 +1,6 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Readonly property Analogo\\\\Kernel\\:\\:\\$connection is already assigned\\.$#"
+			message: "#^Readonly property Chop\\\\Kernel\\:\\:\\$connection is already assigned\\.$#"
 			count: 1
 			path: src/Kernel.php
