--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
     "name": "dreadnip/chop",
     "description": "Clear opcache through php-fpm",
     "require": {
-        "php": "^7.4 || ^8.1",
-        "symfony/console": "^5.4 || ^6.2",
+        "php": "^8.1",
+        "symfony/console": "^6.2",
         "hollodotme/fast-cgi-client": "^3.1"
     },
     "require-dev": {
-        "symfony/var-dumper": "^5.4 || ^6.2",
+        "symfony/var-dumper": "^6.2",
         "phpstan/phpstan": "^1.9",
         "squizlabs/php_codesniffer": "^3.7",
         "phpunit/phpunit": "^9.5"
