--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "hollodotme/fast-cgi-client": "^3.1"
     },
     "require-dev": {
-        "symfony/var-dumper": "^6.2",
+        "symfony/var-dumper": "^6.2 || ^7.0",
         "phpstan/phpstan": "^1.9",
         "squizlabs/php_codesniffer": "^3.7",
         "phpunit/phpunit": "^10"
