Simplify & update the PHPStan set up

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,14 +1,5 @@
-includes:
-	- phpstan-baseline.neon
-services:
-  errorFormatter.junit:
-    class: PHPStan\Command\ErrorFormatter\JUnitErrorFormatter
 parameters:
-  reportUnmatchedIgnoredErrors: false
-  checkGenericClassInNonGenericObjectType: false
-  inferPrivatePropertyTypeFromConstructor: true
   level: 9
   paths:
     - src/
-  ignoreErrors:
-
+    - tests/
